kubernetes/observability/grafana/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-to-mimir
  namespace: grafana
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - grafana
          - grafana-sc-dashboard
          - grafana-sc-datasources
  ingress:
    - fromEntities:
        - cluster
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: query-frontend
            app.kubernetes.io/instance: mimir
            io.kubernetes.pod.namespace: mimir
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-to-loki
  namespace: grafana
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - grafana
          - grafana-sc-dashboard
          - grafana-sc-datasources
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: gateway
            app.kubernetes.io/instance: loki
            io.kubernetes.pod.namespace: loki
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-to-tempo
  namespace: grafana
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - grafana
          - grafana-sc-dashboard
          - grafana-sc-datasources
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: query-frontend
            app.kubernetes.io/instance: tempo
            io.kubernetes.pod.namespace: tempo
      toPorts:
        - ports:
            - port: "3200"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-to-kube-apiserver
  namespace: grafana
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - grafana
          - grafana-sc-dashboard
          - grafana-sc-datasources
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-plugin-downloads
  namespace: grafana
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  egress:
    - toFQDNs:
        - matchPattern: "*.grafana.com"
        - matchPattern: "grafana.com"
        - matchPattern: "storage.googleapis.com"
        - matchPattern: "*.storage.googleapis.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
